# monorail

./: .gitignore  CHANGELOG.md  Cargo.toml  Monorail.reference.js  Monorail.reference.toml  README.md  TUTORIAL.md  install.sh
.github/workflows/: branch.yml
ext/bash/: monorail-bash.sh
src/: cli.rs  depend.rs  error.rs  graph.rs  lib.rs  tracing.rs  tracking.rs
src/api/: cli.rs
src/app/: analyze.rs  checkpoint.rs  config.rs  log.rs  mod.rs  out.rs  result.rs  run.rs  target.rs
src/common/: error.rs  mod.rs  testing.rs
src/core/: app.rs  error.rs  file.rs  git.rs  graph.rs  log.rs  mod.rs  out.rs  remote.rs  server.rs  testing.rs  tracking.rs
tests/: integration.rs
