[package]
name = "monorail"
description = "An overlay for effective monorepo development."
license = "MIT"
homepage = "https://github.com/pnordahl/monorail"
repository = "https://github.com/pnordahl/monorail"
version = "2.3.1"
authors = ["Patrick Nordahl <plnordahl@gmail.com>"]
edition = "2021"
keywords = ["monorail", "monorepo"]

[dependencies]
clap = "4.5"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["std"] }
trie-rs = "0.4"
tokio = { version = "1.40", features = ["fs", "io-std", "io-util", "process", "rt", "macros", "rt-multi-thread", "sync"] }
tokio-stream = "0.1.16"
sha2 = "0.10"
hex = "0.4"
flate2 = "1.0"
chrono = "0.4"
async-compression = { version = "0.4", features = ["tokio", "gzip"] }