[package]
name = "monorail"
description = "A tool for effective polyglot, multi-project monorepo development."
license = "MIT"
homepage = "https://github.com/pnordahl/monorail"
repository = "https://github.com/pnordahl/monorail"
version = "3.1.1"
authors = ["Patrick Nordahl <plnordahl@gmail.com>"]
edition = "2021"
keywords = ["monorail", "monorepo", "build", "cli", "build-tool"]

[dependencies]
clap = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["std"] }
trie-rs = "0.4"
tokio = { version = "1.40", features = ["net", "fs", "io-std", "io-util", "process", "rt", "macros", "rt-multi-thread", "sync"] }
tokio-util = { version = "0.7" }
tokio-stream = "0.1.16"
sha2 = "0.10"
hex = "0.4"
zstd = "0.13.2"
flume = "0.11.1"
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-subscriber = { version = "0.3.18", features = ["time", "fmt", "std", "registry", "json", "env-filter"] }
once_cell = "1.20.2"
chrono = { version = "0.4.38", default-features = false, features = ["alloc", "now", "std"] }

[dev-dependencies]
tempfile = "3.13"